--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -8,19 +8,22 @@
     "lint": "yarn lint:prettier --check && yarn lint:eslint",
     "lint:fix": "yarn lint:prettier --write && yarn lint:eslint --fix",
     "lint:eslint": "eslint './{src, test}/**/*.{ts,tsx}'",
-    "lint:prettier": "yarn prettier './{src, test}/**/*.{ts,tsx}'"
+    "lint:prettier": "yarn prettier './{src, test}/**/*.{ts,tsx}'",
+    "surge": "cp build/index.html build/200.html && surge ./build"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.7",
     "@uniswap/default-token-list": "^2.0.0",
-    "@usedapp/core": "^0.5.0",
     "@usedapp/coingecko": "^0.3.24",
+    "@usedapp/core": "^0.5.0",
     "file-loader": "^6.2.0",
     "framer-motion": "^4.1.5",
+    "json-loader": "^0.5.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "surge": "^0.23.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
